# Ough

./: .gitignore  index.html  package-lock.json  package.json
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: default.toml
src-tauri/src/: lib.rs  main.rs
src/components/: AddMember.jsx  Card.jsx  Nav.jsx  Search.jsx  Table.jsx
